# vex-high-stakes

./: Cargo.toml  README.md  main.py  rokit.toml  rustfmt.toml
.zed/: settings.json
crates/drivetrains/: Cargo.toml
crates/drivetrains/src/: angle.rs  holonomic.rs  lib.rs
crates/hoppenheimer/: Cargo.toml
crates/hoppenheimer/src/: autonomous.rs  driver.rs  lib.rs  macros.rs  main.rs  screen.rs
lune/: build-specific.luau
src/: autonomous.rs  driver.rs  holonomic.rs  lib.rs  main.rs  pneumatics.rs  robot.rs
src/competition/: autonomous.rs  driver.rs  mod.rs
src/drivetrain/: differential.rs  holonomic.rs  mod.rs
src/utils/: macros.rs  mod.rs
