[package]
name = "vex-high-stakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
evian = "0.3.0-beta.1"
vexide = "0.5.0-rc.2"
