# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "drivetrains"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = { version = "0.5.1", default-features = false }
log = "0.4.22"
vexide = "0.5.1"
evian = "0.3.0-beta.2"
anyhow = { version = "1.0.93", default-features = false }
